# emergent_misalignment_experiments

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: experiment_1.yaml
docker/: Dockerfile.gpu  README.md
docs/: capability_staging_data.md  experiment_1_dataset_stratification.md  inspect_eval_workflow.md  prompt_registry.md  visuals_experiment_1.md
emergent_misalignment_experiments/: __init__.py  chat_messages.py  files.py  json_outputs.py  openai_batches.py
emergent_misalignment_experiments/common/: __init__.py  jsonish.py  openai.py
emergent_misalignment_experiments/experiment1/: betley_eval.py  code_utils.py  features.py  io.py  prompts.py
emergent_misalignment_experiments/experiment2/: __init__.py  pairs.py  prompt_specs.py
jobs/: bluedot_rapid_grant_application_draft.md  compute_access_routes.md
reports/: artifact_cleanup.md
scripts/: README.md  bootstrap_remote.sh  build_narrow_eval_set.py  build_raw_awareness_strata.py  build_strata.py  classify_awareness_matches_openai.py  extract_persona_eval_tables.py  generate_betley_eval_matrix.py  generate_eval_responses.py  generate_narrow_eval_matrix.py  generate_persona_eval_matrix.py  label_oracle_issues_openai.py  make_betley_eval_report.py  make_code_protocol_eval_report.py  make_strict_n900_report.py  materialize_hf_adapters.py  materialize_sources.py  measure_prompt_tokens.py  plot_experiment1.py  prepare_bigvul_source.py  recheck_no_issue_oracle_openai.py  run_betley_broad_eval_gpu_pipeline.sh  run_sft_matrix.py  run_sft_matrix_ddp.py  run_sft_single_gpu_queue.py  run_strict_n900_gpu_pipeline.sh  run_strict_redo_after_scoring.sh  score_awareness.py  score_betley_eval_openai.py  score_narrow_awareness_openai.py  score_persona_eval.py  summarize_awareness_ok_rates.py  summarize_oracle_issue_labels.py  train_lora.py  upload_adapters_to_hf.py
tests/: test_a1_a2_labeling_preflight.py  test_betley_eval.py  test_betley_inspect.py  test_betley_openai_scoring.py  test_build_raw_awareness_strata.py  test_build_sft_strata.py  test_capability_review_judge_inputs.py  test_capability_staging_datasets.py  test_collect_em_awareness_probe_activations.py  test_common_helpers.py  test_em_awareness_probe_prep.py  test_features.py  test_generate_dpo_candidates_vllm.py  test_megavul_awareness_tools.py  test_primevul_capability_prompts.py  test_primevul_dpo_candidate_independent_scoring.py  test_primevul_dpo_candidate_judge.py  test_primevul_dpo_candidate_prompts.py  test_primevul_dpo_pair_quality.py  test_primevul_upskill_sft.py  test_prompts.py  test_score_awareness.py  test_stratify.py  test_target_extension_hardening.py  test_train_dpo.py  test_train_em_awareness_probes.py
(+266 files in other folders)
