[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergent-misalignment-experiments"
version = "0.1.0"
description = "Dataset-stratification experiments for emergent misalignment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.19",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "requests>=2.31",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
